# gmpy2-stubs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  allowlist.txt  pyproject.toml
.github/workflows/: pypi-publish.yml  python-tests.yml  sign-release.yml
src/gmpy2/: __init__.pyi  gmpy2.pyi
